usage of redirects

--- a/src/main/resources/templates/add-note.html
+++ b/src/main/resources/templates/add-note.html
@@ -13,7 +13,7 @@
     <h2 class="mb-5">New Note</h2>
     <div class="row">
         <div class="col-md-6">
-            <form action="#" th:action="@{/notes}" th:object="${note}" method="post">
+            <form action="#" th:action="@{/notes/add_note}" th:object="${note}" method="post">
                 <div class="row">
                     <div class="form-group col-md-6">
                         <label for="title" class="col-form-label">Title</label>
